<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/work_sans_medium"
        android:text="@string/you_re_almost_there"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/work_sans_medium"
        android:text="@string/just_one_more_step"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/work_sans_medium"
        android:text="@string/disclaimer_a_family_can_only_be_created_by_a_guardian_you_are_advised_to_request_your_guardian_to_make_a_family_for_you_to_get_access_to_the_entirity_of_our_features"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterButtonCode"
        tools:ignore="SmallSp,VisualLintLongText,TextSizeCheck" />

    <EditText
        android:id="@+id/EnterCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="6dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/code"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/EnterButtonCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="@font/work_sans_medium"
        android:text="@string/enter_family_code"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/EnterCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="147dp"
        android:layout_height="362dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/HelpingHandImg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/untitled_design__1_"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/BackButtonCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:text="@string/back"
        android:textColor="#37474F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.952" />

    <Button
        android:id="@+id/EnterButtonCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#CEA5D3"
        android:text="@string/EnterCode"
        android:textColor="#37474F"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

</androidx.constraintlayout.widget.ConstraintLayout>