<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans_medium"
        android:text="Create Family Code"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="129dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans_medium"
        android:text="Welcome Guardian!"
        android:textColor="#000000"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="30dp" />

    <Button
        android:id="@+id/enterButtonCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#CEA5D3"
        android:text="@string/EnterCode"
        android:textColor="#37474F"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="255dp" />

    <Button
        android:id="@+id/backButtonCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:text="@string/back"
        android:textColor="#37474F"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="667dp" />

    <EditText
        android:id="@+id/enterCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/code"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="179dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="147dp"
        android:layout_height="362dp"
        android:contentDescription="@string/HelpingHandImg"
        app:srcCompat="@drawable/untitled_design__1_"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="321dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans_medium"
        android:text="Just One More Step Till Your Family Is Set Up!"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="85dp" />

</androidx.constraintlayout.widget.ConstraintLayout>